beforeLogin footer spacing fixed

--- a/styles/beforeLogin.css
+++ b/styles/beforeLogin.css
@@ -165,7 +165,7 @@ line-height: 1.5;
 }
 #footer {
     background-color: #213DCD; 
-    margin-top: 32%;  /* YOU CAN PULL THIS OUT WHEN YOU IMPLEMENT YOUR PAGE.*/
+    margin-top: 40px;  /* YOU CAN PULL THIS OUT WHEN YOU IMPLEMENT YOUR PAGE.*/
     padding-top: 10px;
     /* height: 300px; */
     width: 100%;
@@ -208,4 +208,3 @@ line-height: 1.5;
   .line{
     display: none;
   }
-
